# SpriteUVEditor

./: CMakeLists.txt  LICENSE  README.md  main.cpp  sprite_uv_editor.rc
.github/workflows/: release.yaml
source/: app.cpp  app.hpp  definitions.hpp  drawing.hpp  geometry.hpp  project.cpp  project.hpp
